@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
+Added support for compound item apply animations
+    server/apply.c
+Yann Chachkoff (gros) 2007-11-25
 
 Refactor peacemaker code.
     server/ob_types.c
